objects/Equipment_Disposables__c.object
<CustomObject><fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Preference_Card__c</fullName>
        <label>Preference Card</label>
        <referenceTo>Preference_Card__c</referenceTo>
        <relationshipLabel>Equipment &amp; Disposables</relationshipLabel>
        <relationshipName>Equipment_Disposables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Equipment &amp; Disposables</relationshipLabel>
        <relationshipName>Equipment_Disposables</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InActive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>false</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>false</enableSharing><enableStreamingApi>false</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Equipment &amp; Disposables</label><nameField>
        <displayFormat>E-{000}</displayFormat>
        <label>Equipment &amp; Disposables Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Equipment &amp; Disposables</pluralLabel><sharingModel>ControlledByParent</sharingModel><startsWith>Vowel</startsWith></CustomObject>